--- a/templates/index.html
+++ b/templates/index.html
@@ -10,28 +10,30 @@
     <div class="container">
         <h1 class="my-4">Python Code Converter</h1>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="form-group">
                     <label for="inputCode">Input Code:</label>
                     <textarea id="inputCode" class="form-control" rows="10" placeholder="Enter your Python code here"></textarea>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-2 d-flex flex-column justify-content-center">
+                <div class="form-group">
+                    <label for="pythonVersion">Target Python Version:</label>
+                    <select id="pythonVersion" class="form-control">
+                        <option value="3.9">Python 3.9</option>
+                        <option value="3.8">Python 3.8</option>
+                        <option value="3.7">Python 3.7</option>
+                    </select>
+                </div>
+                <button onclick="convertCode()" class="btn btn-primary mb-3">Convert Code</button>
+            </div>
+            <div class="col-md-5">
                 <div class="form-group">
                     <label for="outputCode">Converted Code:</label>
                     <textarea id="outputCode" class="form-control" rows="10" placeholder="Converted code will appear here" readonly></textarea>
                 </div>
             </div>
         </div>
-        <div class="form-group">
-            <label for="pythonVersion">Target Python Version:</label>
-            <select id="pythonVersion" class="form-control">
-                <option value="3.9">Python 3.9</option>
-                <option value="3.8">Python 3.8</option>
-                <option value="3.7">Python 3.7</option>
-            </select>
-        </div>
-        <button onclick="convertCode()" class="btn btn-primary mb-3">Convert Code</button>
     </div>
 
     <script>
